# aoc-2025

./: Cargo.toml
crates/day_1/: Cargo.toml  sample_input.txt
crates/day_1/src/: error.rs  main.rs  types.rs
crates/day_2/: Cargo.toml  time_profile.md
crates/day_2/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
